# code-understanding-system

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  app.py  cli.py  log.py
backend/analyzer/: __init__.py  generic_analyzer.py  git_blame.py  graph.py  js_analyzer.py  orchestrator.py  orchestrator_v2.py  python_analyzer.py  ts_parser.py
backend/graph/: __init__.py  kuzu_store.py
backend/impact/: __init__.py  analyzer.py
backend/lsp/: __init__.py  client.py
backend/mcp/: __init__.py  server.py  server_standalone.py  tool_impls.py  tools.py
backend/memory/: __init__.py  store.py
backend/review/: __init__.py  reviewer.py  tour.py
backend/scip/: __init__.py  indexer.py
backend/search/: __init__.py  doc_indexer.py  embeddings.py  engine.py  llm.py
code_kg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  breadcrumb.js  code-panel.js  detail-panel.js  graph.js  sidebar.js
frontend/js/views/: agent-trace-view.js  codecity-view.js  diff-view.js  matrix-view.js  metro-view.js  sunburst-view.js  tree-view.js
scripts/: mcp-server.sh
tests/: benchmark.py  test_benchmarks.py  test_kuzu.py  test_mcp.py  test_search.py  test_search_engine.py  test_smoke.py
