[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-kg"
version = "0.3.0"
description = "Human + Agent friendly codebase understanding — Web UI + MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Maxen Wang"},
]
keywords = ["code-understanding", "knowledge-graph", "mcp", "agent-tools", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.30",
    "kuzu>=0.11",
    "tree-sitter>=0.21",
    "tree-sitter-languages>=1.10",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/bamboo/code-understanding-system"
Repository = "https://github.com/bamboo/code-understanding-system"

[project.scripts]
code-kg = "backend.cli:main"

[project.entry-points."mcp.servers"]
code-kg = "backend.mcp.server_standalone:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "backend",
    "backend.analyzer",
    "backend.graph",
    "backend.search",
    "backend.memory",
    "backend.impact",
    "backend.mcp",
]

[tool.setuptools.package-data]
backend = ["**/*.py"]
