[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-kg"
version = "0.3.0"
description = "CodeKG — Understand any codebase. Knowledge graph + search + visualization + agent tools."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CodeKG Contributors"}
]
keywords = ["code-analysis", "knowledge-graph", "search", "mcp", "agent-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "kuzu>=0.3",
    "tree-sitter",
    "tree-sitter-languages",
    "click>=8.0",
    "pathspec>=0.11",
    "scikit-learn>=1.0",
    "hnswlib>=0.7",
]

[project.optional-dependencies]
lsp = ["jedi>=0.19"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
code-kg = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend"]
omit = ["*/test_*", "*/__pycache__/*"]
